--- a/Frontend/UserSide/GlobalConnect/package.json
+++ b/Frontend/UserSide/GlobalConnect/package.json
@@ -24,7 +24,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.5",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.4",
@@ -43,6 +43,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-config": "^1.5.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-reanimated": "~3.16.1",
@@ -62,6 +64,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
