--- a/Frontend/UserSide/GlobalConnect/package.json
+++ b/Frontend/UserSide/GlobalConnect/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -45,6 +46,7 @@
     "react-native": "0.76.5",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-reanimated": "~3.16.1",
