--- a/Frontend/UserSide/GlobalConnect/package.json
+++ b/Frontend/UserSide/GlobalConnect/package.json
@@ -67,6 +67,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
