--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
