--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "device-detector-js": "^3.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
