--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-content-loader": "^7.0.2",
