--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^11.0.2",
     "reactjs-localstorage": "^1.0.1",
     "recharts": "^2.15.0",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
