--- a/Frontend/globalConnect/package.json
+++ b/Frontend/globalConnect/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
@@ -30,6 +30,8 @@
     "expo-image": "~2.0.5",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.7",
+    "expo-media-library": "~17.0.6",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -52,8 +54,7 @@
     "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
-    "socket.io-client": "^4.8.1",
-    "expo-media-library": "~17.0.6"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
