--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
@@ -23,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
