Added real time chatting photos can be saved now

--- a/Frontend/globalConnect/app.json
+++ b/Frontend/globalConnect/app.json
@@ -12,7 +12,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.yourcompany.globalconnect", 
+      "package": "com.yourcompany.globalconnect",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -22,6 +22,12 @@
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
+    },
+    "notification": {
+      "icon": "./assets/images/notification-icon.png",
+      "color": "#ffffff",
+      "androidMode": "default",
+      "androidCollapsedTitle": "New messages"
     },
     "plugins": [
       "expo-router",
@@ -37,6 +43,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "74b46798-df04-48a9-8c07-dea648ae237c"
+      }
+    },
+    "owner": "ganeshparajuli2059"
   }
 }
