--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "device-detector-js": "^3.0.3",
     "dotenv": "^16.4.7",
+    "expo-server-sdk": "^3.14.0",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
     "jsonwebtoken": "^9.0.2",
