--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
+    "canvas": "^3.1.0",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
