--- a/Frontend/globalConnect/package.json
+++ b/Frontend/globalConnect/package.json
@@ -24,14 +24,18 @@
     "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
+    "expo-device": "~7.0.2",
     "expo-file-system": "~18.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.5",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.7",
     "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.13",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -39,6 +43,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "express-socket.io": "^1.0.3",
+    "firebase": "^11.4.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
