--- a/Frontend/AdminPanel/package.json
+++ b/Frontend/AdminPanel/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.5",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
